[package]
name = "ratel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
toml = "0.5"
itertools = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
regex = "1.5.4"
x509-parser = "0.12.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
futures = "0.3.17"
async-native-tls = "0.3.3"
serde_json = "1.0.69"
reqwest = { version = "0.11", features = ["blocking", "json", "native-tls"] }
tokio = { version = "1", features = ["full"] }
dns-lookup = "1.0.8"
cidr-utils = "0.5.5"
structopt = "0.3"
subprocess = "0.2.8"
base64 = "0.13"
murmur3 = "0.5.1"
chrono = "0.4.19"
rand = "0.8.4"
num-bigint = "0.4.3"
urlencoding = "1.0.0"
umya-spreadsheet = "0.4.0"   #reader has a bug
calamine = "0.18.0"

[target.'cfg(unix)'.dependencies]
rlimit = "0.6.2"