[package]
name = "ratel"
version = "2.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
toml = "0.5"
itertools = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
regex = "1.5.4"
x509-parser = "0.12.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
futures = "0.3.17"
async-native-tls = "0.3.3"
serde_json = "1.0.79"
reqwest = { version = "0.11", features = ["blocking", "json", "native-tls"] }
dns-lookup = "1.0.8"
cidr-utils = "0.5.5"
base64 = "0.13"
murmur3 = "0.5.1"
chrono = "0.4.19"
rand = "0.8.4"
urlencoding = "1.0.0"
encoding_rs = "0.8.30"
csv = "1.1.6"
async-h1 = {path="./async-h1"}
http-types = { version = "2.12.0", default-features = false }

[profile.release]
panic = 'abort'
lto = true
opt-level = 'z'
codegen-units = 1