[package]
name = "async-h1"
version = "2.3.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/async-h1"
documentation = "https://docs.rs/async-h1"
description = "Asynchronous HTTP 1.1 parser."
keywords = ["async", "http", "stream", "parser", "http1"]
categories = [
  "asynchronous",
  "parser-implementations",
  "web-programming",
  "web-programming::http-client",
  "web-programming::http-server"
]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
httparse = "1.3.4"
async-std = "1"
http-types = { version = "2.12.0", default-features = false }
futures-core = "0.3.8"
async-channel = "1.5.1"